# deep-framex

./: LICENSE  README.md  extraction_spec.yaml  pyproject.toml
notebooks/: AdvancedExtraction.ipynb  ExtractionExamples.ipynb
notebooks/jupyter/: AdvancedExtraction.ipynb  ExtractionExamples.ipynb  PipelineConnections.ipynb  SensorConstraints.ipynb
notebooks/marimo/: 00-getting-started.py  01-gettingStarted.py  01-simple-extraction.py  02-examine-frames.py  02-simpleExtraction.py  03-advanced-extraction.py  03-examineFrames.py  04-advancedExtraction.py  04-sensor-extraction.py  05-sensorExtraction.py  05-spec-review.py  06-specReview.py  sensor.csv  theme-00.css  theme-01.css  theme-02.css  theme-03.css  theme-04.css  theme-05.css
src/deep_framex/: __init__.py  cli.py
src/deep_framex/config/: video_discovery.py
src/deep_framex/data/: importer.py
src/deep_framex/db/: session_db.py
src/deep_framex/extraction/: frame_extractor.py  video_reader.py  video_session.py
src/deep_framex/metadata/: __init__.py  apply_metadata.py  assemble.py  ifdo.py
src/deep_framex/models/: core.py
src/deep_framex/output/: output_frames.py
src/deep_framex/pipeline/: __init__.py
src/deep_framex/planning/: planner.py
src/deep_framex/utils/: __init__.py  coordinates.py  timestamps.py
src/soi_frame_extractor/: __init__.py  cli.py
src/soi_frame_extractor/config/: spec_parser.py  video_discovery.py
src/soi_frame_extractor/data/: importer.py
src/soi_frame_extractor/db/: session_db.py
src/soi_frame_extractor/extraction/: frame_extractor.py  video_reader.py  video_session.py
src/soi_frame_extractor/metadata/: __init__.py  apply_metadata.py  assemble.py  ifdo.py  (+1 more)
tests/: test_assemble.py  test_biigle.py  test_coordinates.py  test_importer.py  test_interpolate_sensor.py  test_output.py  test_planner.py  test_spec_parser.py  test_timestamps.py
(+7 files in other folders)
