[project]
name = "deep-framex"
version = "0.1.0"
description = "Library for frame extraction from deep sea video"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "numpy>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "Pillow>=11.0",
    "piexif>=1.1.3",
]

[project.scripts]
deep-framex = "deep_framex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
